manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchensink
  namespace: ci-cd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitchensink
  template:
    metadata:
      labels:
        app: kitchensink
    spec:
      containers:
        - name: kitchensink
          image: registry.licendra.com/kitchensink:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: kitchensink
  namespace: ci-cd
spec:
  selector:
    app: kitchensink
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kitchensink
  namespace: ci-cd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-cache-key: "$scheme$request_method$host$request_uri"
    nginx.ingress.kubernetes.io/proxy-cache-use-stale: "error timeout updating http_500 http_502 http_503 http_504"
    nginx.ingress.kubernetes.io/proxy-cache-revalidate: "on"
    nginx.ingress.kubernetes.io/proxy-cache-bypass: "$http_cache_control"
    nginx.ingress.kubernetes.io/proxy-cache: "true"
    nginx.ingress.kubernetes.io/proxy-cache-valid: "200 302 10m"
spec:
  tls:
    - hosts:
        - kitchensink.licendra.com
      secretName: kitchensink-tls
  rules:
    - host: kitchensink.licendra.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kitchensink
                port:
                  number: 80
